# 31a_agent

./: .dockerignore  .env.example  Dockerfile  README.md  bug.memo  docker-compose.yml  mcp.json.example  requirements.txt
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  audio.py  chat.py  config.py  conversation.py  customer_service.py  general.py  health.py  message.py
app/core/agent/: __init__.py  base.py  executor_agent.py  planner_agent.py  simple_agent.py  tool_agent.py
app/core/audio/: __init__.py  stt_service.py  tts_service.py
app/core/embedding/: __init__.py  embedding_cache.py  embedding_service.py  sentence_transformer.py
app/core/knowledge/: __init__.py  entity_extractor.py  graph_reasoner.py  knowledge_graph_manager.py  memory_upgrader.py  relation_extractor.py
app/core/llm/: base.py  deepseek.py  factory.py
app/core/mcp/: __init__.py  client.py  loader.py  manager.py
app/core/memory/: __init__.py  context_builder.py  forgetting_mechanism.py  hybrid_retriever.py  importance_scorer.py  memory_classifier.py  memory_compressor.py  (+1 more)
app/dao/: __init__.py  base.py  config_dao.py  conversation_dao.py  knowledge_dao.py  memory_dao.py  message_dao.py  task_dao.py  user_dao.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py
app/models/: __init__.py  base.py  conversation.py  database.py  knowledge.py  memory.py  message.py  task.py  user.py
app/schemas/: __init__.py  base.py  config.py  conversation.py  knowledge.py  memory.py  message.py  task.py
app/services/: __init__.py  config_service.py  conversation_service.py  knowledge_service.py  memory_service.py  message_service.py  planning_service.py  reflection_service.py  role_service.py
app/tools/: base.py  manager.py  registry.py
app/utils/: config.py  exceptions.py  helpers.py  logger.py
config/: config.example.yaml  config.yaml  faiss_gpu_config.yaml.example
config/prompts/: customer_service_planner.txt  customer_service_reflection.txt  customer_service_system.txt  general_planner.txt  general_reflection.txt  general_system.txt  system.txt
docker/: README.md  entrypoint.sh
docs/: MCP快速开始指南.md  数据库设计.md  添加新工具指南.md  项目架构.md
docs/api/: api_reference.md
docs/deployment/: Docker部署指南.md  macOS部署指南.md  生产环境部署指南.md
docs/developer/: 扩展开发指南.md  最佳实践指南.md
docs/plan/: 总计划.md
mcp_tools/CloudMusic_Auto_Player-master/: CLAUDE.md  PROJECT_STRUCTURE.md  README.md  config.json  playlists.json  pyproject.toml
mcp_tools/CloudMusic_Auto_Player-master/src/: __init__.py  server.py  server_simple.py
mcp_tools/CloudMusic_Auto_Player-master/src/config/: README.md  hotkeys.json
mcp_tools/CloudMusic_Auto_Player-master/src/controllers/: __init__.py  daily_controller.py  netease_controller.py
mcp_tools/CloudMusic_Auto_Player-master/src/utils/: config_manager.py  music_search.py
scripts/: init_database.py  start_server.py  stop_server.py
scripts/migrations/: 001_add_agent_tables.sql
tests/: conftest.py
tests/e2e/: __init__.py  test_api_integration.py  test_orchestrator_e2e.py  test_role_apis.py
tests/integration/: test_memory_integration.py  test_memory_knowledge_integration.py  test_planning_integration.py  test_reflection_integration.py  test_role_orchestrator_integration.py
tests/performance/: __init__.py  test_api_performance.py  test_memory_performance.py
tests/unit/: test_models.py  test_orchestrator.py  test_planning.py  test_reflection.py  test_role_manager.py
web/: readme
web/templates/: chat.html
(+36 files in other folders)
